# rubik

./: .gitignore  CMakeLists.txt  Makefile
src/: calc.c  calc.h  main.c  rubik.c  rubik.h
